// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SalesMetrics component Renders the SFTCard with bottomRightBtnAction 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#ffffffff",
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#f5f5f5",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 10,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "marginLeft": 0,
            }
          }
        >
          SFT-Title
        </Text>
        <Text
          style={
            {
              "color": "#9e9e9e",
              "fontSize": 10,
              "marginLeft": 0,
            }
          }
        >
          SFT-SubTitle
        </Text>
      </View>
    </View>
  </View>
  <Text>
    Test
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            [
              {
                "height": 24,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#00000000",
                  "flex": 1,
                  "justifyContent": "center",
                  "opacity": 1,
                }
              }
              testID="bottomRightBtn-0"
            >
              <Text
                style={
                  {
                    "color": "#0071e9",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "textAlign": undefined,
                  }
                }
              >
                bottomRightBtnTxt
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SalesMetrics component Renders the SFTCard with bottomRightBtnText only 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#ffffffff",
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#f5f5f5",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 10,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "marginLeft": 0,
            }
          }
        >
          SFT-Title
        </Text>
        <Text
          style={
            {
              "color": "#9e9e9e",
              "fontSize": 10,
              "marginLeft": 0,
            }
          }
        >
          SFT-SubTitle
        </Text>
      </View>
    </View>
  </View>
  <Text>
    Test
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "padding": 16,
      }
    }
  >
    <Text
      style={
        {
          "color": "#757575",
        }
      }
    >
      bottomRightBtnTxt
    </Text>
  </View>
</View>
`;

exports[`SalesMetrics component Renders the SFTCard with topRightBtnAction and no subtitle 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#ffffffff",
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#f5f5f5",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 10,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <View>
        <Text
          style={
            {
              "marginLeft": 0,
            }
          }
        >
          SFT-Title
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "height": 24,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="topRightBtn"
        >
          <Text
            style={
              {
                "color": "#0071e9",
                "fontFamily": "Roboto-Medium",
                "fontSize": 14,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            topRightBtnTxt
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Text>
    Test
  </Text>
</View>
`;

exports[`SalesMetrics component Renders the SFTCard with topRightBtnAction, no subtitle and iconName 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#ffffffff",
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#f5f5f5",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 10,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Icon
        color="#616161"
        name="iconName"
        size={15}
        style={
          {
            "marginRight": 16,
          }
        }
      />
      <View>
        <Text
          style={
            {
              "marginLeft": 0,
            }
          }
        >
          SFT-Title
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "height": 24,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="topRightBtn"
        >
          <Text
            style={
              {
                "color": "#0071e9",
                "fontFamily": "Roboto-Medium",
                "fontSize": 14,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            topRightBtnTxt
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Text>
    Test
  </Text>
</View>
`;

exports[`SalesMetrics component Renders the SFTCard with topRightBtnAction, no subtitle and iconProp 1`] = `
<View
  style={
    {
      "alignSelf": "stretch",
      "backgroundColor": "#ffffffff",
      "marginTop": 8,
    }
  }
>
  <View
    style={
      {
        "borderBottomColor": "#f5f5f5",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 10,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 16,
          }
        }
      >
        iconProp
      </View>
      <View>
        <Text
          style={
            {
              "marginLeft": 0,
            }
          }
        >
          SFT-Title
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "height": 24,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="topRightBtn"
        >
          <Text
            style={
              {
                "color": "#0071e9",
                "fontFamily": "Roboto-Medium",
                "fontSize": 14,
                "fontWeight": "bold",
                "textAlign": undefined,
              }
            }
          >
            topRightBtnTxt
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Text>
    Test
  </Text>
</View>
`;
